Add in MainActivity 3 buttons,Add ListMuseumActivity that takes from Xml from a listview a stringArray,Add 2 Activities Acropolis Benaki for testing purposes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ListMuseumActivity" />
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".AcropolisActivity" />
+        <activity android:name=".BenakiMuseumActivity"></activity>
     </application>
 
 </manifest>
